--- a/index_0920.html
+++ b/index_0920.html
@@ -7,7 +7,7 @@
 		<base target="_blank">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="stylesheet" href="assets/css/main.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>	
 	</head>
 	
 	<body class="">
@@ -16,15 +16,12 @@
 			<section id="main" style="padding-left: 0px;padding-right: 0px;padding-top: 20px;padding-bottom: 20px;">
 				<header>
 					<h1>空間分析</h1>
-					<p>
-						Geog2017<br>
-						授課老師：溫在弘<br>
-						課程助教：杜承軒<br>
-						<a href="EXAM/index.html"  class="button icon fa-share exam" target="_self">歷年考古題</a>
-					</p>
+					Geog2017<br>
+					授課老師：溫在弘<br>
+					課程助教：杜承軒
 				</header>
 
-				<div style="padding-left: 20px;padding-right: 20px; text-align:left;">
+				<div style="padding-left: 20px;padding-right: 20px; text-align:left;color:black;">
 
 					<hr>	
 					<h2>【INTRO】課程介紹</h2>
@@ -135,7 +132,7 @@
 					<hr>
 
 					<h2 style="color:red;font-size:150%"> 【EXAM】歷年考古題</h2>
-					<a class="button icon fa-globe red"  href="EXAM/index.html" target="_self" >空間分析：考古題專區</a>
+					<a class="button icon fa-globe red"  href="EXAM/index.html" target="_self" style="height: 3em;line-height: 3em;font-size:120%">空間分析：考古題專區</a>
 					
 				</div>
 
