--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
 					<h2>【INTRO】課程介紹</h2>
 					<a class="button icon fa-book blue" href="WEN/Intro.pdf">授課投影片</a>
 					<a class="button icon fa-book blue" href="WEN/Syllabus.pdf">課程大綱</a>
+					<a class="button icon fa-database grey" href="DATA/all.zip">整學期課程圖資</a>
 					<hr>
 
 					<h2>【1】空間資料處理與地圖繪製</h2>
 					<a class="button icon fa-book blue" href="WEN/1.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/1.R">授課程式碼</a>
+					<a class="button icon fa-database grey" href="DATA/1.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_1.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab1.html">Lab1</a>
@@ -47,18 +49,23 @@
 					<h2>【2】R實作GIS套件</h2>
 					<a class="button icon fa-book blue" href="WEN/2.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/2.R">授課程式碼</a>
+					<a class="button icon fa-database grey" href="DATA/2.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_2.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab2.html">Lab2</a>
 					<a class="button icon fa-youtube red" href="https://youtu.be/yckKDapwClk">助教課影片</a>
 					<br/>
-					<a class="button icon fa-globe orange" href="OTHER/GIS_class.html">課堂練習參考答案</a>
+					<a class="button icon fa-globe orange" href="OTHER/GIS_class.html">課堂練習</a>
+					<a class="button icon fa-book orange" href="OTHER/osm.pdf">OSM補充</a>
+					<a class="button icon fa-globe orange" href="OTHER/osm.html">OSM</a>
+					<a class="button icon fa-globe orange" href="OTHER/leaflet.html">leaflet</a>
 					<hr>
 
 
 					<h2>【3】R進行空間運算</h2>
 					<a class="button icon fa-book blue" href="WEN/3.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/3.R">授課程式碼</a>
+					<a class="button icon fa-database grey" href="DATA/3.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_3.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab3.html">Lab3</a>
@@ -71,6 +78,7 @@
 					<h2>【4】描述空間型態</h2>
 					<a class="button icon fa-book blue" href="WEN/4.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/4.R">授課程式碼</a>
+					<a class="button icon fa-database grey" href="DATA/4.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_4.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab4.html">Lab4</a>
@@ -81,6 +89,7 @@
 					<h2>【5】樣方分析：QUADRAT ANALYSIS</h2>
 					<a class="button icon fa-book blue" href="WEN/5.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/5.R">授課程式碼</a>
+					<a class="button icon fa-database grey" href="DATA/5.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_5.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab5.html">Lab5</a>
@@ -90,6 +99,7 @@
 					<h2>【6】鄰近分析：NNA、K-NNI、G(D)</h2>
 					<a class="button icon fa-book blue" href="WEN/6.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/6.R">授課程式碼</a>
+					<a class="button icon fa-database grey" href="DATA/6.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_6.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab6.html">Lab6</a>
@@ -102,11 +112,15 @@
 					<a class="button icon fa-book green" href="TA/TA_7.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab7.html">Lab7</a>
 					<a class="button icon fa-youtube red" href="https://youtu.be/k10n58LvsaI">助教課影片</a>
+					<br/>
+					<a class="button icon fa-globe orange" href="OTHER/Biv_K.html">二元點群聚</a>
+					<a class="button icon fa-youtube orange" href="https://youtu.be/JPsuylqLZQs">二元點群聚 Bivariate K</a>
 					<hr>
 
 					<h2>【8】核密度分析：KDE</h2>
 					<a class="button icon fa-book blue" href="WEN/8.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/8.R">授課程式碼</a>
+					<a class="button icon fa-database grey" href="DATA/8.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_8.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab8.html">Lab8</a>
@@ -128,15 +142,23 @@
 					<a class="button icon fa-book green" href="TA/TA_10.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab10.html">Lab10</a>
 					<a class="button icon fa-youtube red" href="https://youtu.be/Jaaf6lx9K_A">助教課影片</a>
+					<br/>
+					<a class="button icon fa-youtube orange" href="https://youtu.be/gOuFIxk8oFI?t=876">空間自相關詳細計算</a>
+					<a class="button icon fa-youtube orange" href="https://youtu.be/5bqHT3Gp2W0">多重檢定校正</a>
 					<hr>
 
-					<h2>互動式儀表板：Shiny</h2>
-					<a class="button icon fa-youtube red" href="https://youtu.be/Z9_y351JVsA">Shiny</a>
+					<h2>【11】地理統計：半變異元分析</h2>
+					<a class="button icon fa-book blue" href="WEN/11.pdf">授課投影片</a>
+					<a class="button icon fa-code blue" href="CODE/11.R">授課程式碼</a>
+					<br/>
+					<a class="button icon fa-book green" href="TA/TA_11.pdf">助教投影片</a>
+					<a class="button icon fa-youtube red" href="https://youtu.be/8Cbny0_iAFE">助教課影片</a>
 					<hr>
-
-					<h2 style="color:red;font-size:150%"> 【EXAM】歷年考古題</h2>
-					<a class="button icon fa-globe red"  href="EXAM/index.html" target="_self" >空間分析：考古題專區</a>
 					
+					<h2>【12】互動式儀表板：Shiny</h2>
+					<a class="button icon fa-book green" href="TA/TA_12.pdf">助教投影片</a>
+					<a class="button icon fa-database grey" href="DATA/12.zip">圖資</a>
+					<a class="button icon fa-youtube red" href="https://youtu.be/Z9_y351JVsA">助教課影片</a>
 				</div>
 
 				<footer id="footer">
