--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
 					<h2>【INTRO】課程介紹</h2>
 					<a class="button icon fa-book blue" href="WEN/Intro.pdf">授課投影片</a>
 					<a class="button icon fa-book blue" href="WEN/Syllabus.pdf">課程大綱</a>
-					<a class="button icon fa-database grey" href="DATA/all.zip">整學期課程圖資</a>
+					<a class="button icon fa-database grey" href="data.zip">整學期課程圖資</a>
 					<hr>
 
 					<h2>【1】空間資料處理與地圖繪製</h2>
 					<a class="button icon fa-book blue" href="WEN/1.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/1.R">授課程式碼</a>
-					<a class="button icon fa-database grey" href="DATA/1.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_1.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab1.html">Lab1</a>
@@ -49,7 +48,6 @@
 					<h2>【2】R實作GIS套件</h2>
 					<a class="button icon fa-book blue" href="WEN/2.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/2.R">授課程式碼</a>
-					<a class="button icon fa-database grey" href="DATA/2.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_2.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab2.html">Lab2</a>
@@ -65,7 +63,6 @@
 					<h2>【3】R進行空間運算</h2>
 					<a class="button icon fa-book blue" href="WEN/3.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/3.R">授課程式碼</a>
-					<a class="button icon fa-database grey" href="DATA/3.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_3.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab3.html">Lab3</a>
@@ -78,7 +75,6 @@
 					<h2>【4】描述空間型態</h2>
 					<a class="button icon fa-book blue" href="WEN/4.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/4.R">授課程式碼</a>
-					<a class="button icon fa-database grey" href="DATA/4.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_4.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab4.html">Lab4</a>
@@ -89,7 +85,6 @@
 					<h2>【5】樣方分析：QUADRAT ANALYSIS</h2>
 					<a class="button icon fa-book blue" href="WEN/5.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/5.R">授課程式碼</a>
-					<a class="button icon fa-database grey" href="DATA/5.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_5.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab5.html">Lab5</a>
@@ -99,7 +94,6 @@
 					<h2>【6】鄰近分析：NNA、K-NNI、G(D)</h2>
 					<a class="button icon fa-book blue" href="WEN/6.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/6.R">授課程式碼</a>
-					<a class="button icon fa-database grey" href="DATA/6.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_6.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab6.html">Lab6</a>
@@ -120,7 +114,6 @@
 					<h2>【8】核密度分析：KDE</h2>
 					<a class="button icon fa-book blue" href="WEN/8.pdf">授課投影片</a>
 					<a class="button icon fa-code blue" href="CODE/8.R">授課程式碼</a>
-					<a class="button icon fa-database grey" href="DATA/8.zip">圖資</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_8.pdf">助教投影片</a>
 					<a class="button icon fa-globe green" href="LAB/Lab8.html">Lab8</a>
@@ -157,7 +150,7 @@
 					
 					<h2>【12】互動式儀表板：Shiny</h2>
 					<a class="button icon fa-book green" href="TA/TA_12.pdf">助教投影片</a>
-					<a class="button icon fa-database grey" href="DATA/12.zip">圖資</a>
+					<a class="button icon fa-database grey" href="OTHER/Shiny.zip">圖資</a>
 					<a class="button icon fa-youtube red" href="https://youtu.be/Z9_y351JVsA">助教課影片</a>
 				</div>
 
