--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<h2>【INTRO】課程介紹</h2>
 					<a class="button icon fa-book blue" href="WEN/Intro.pdf">授課投影片</a>
 					<a class="button icon fa-book blue" href="WEN/Syllabus.pdf">課程大綱</a>
-					<a class="button icon fa-database grey" href="data.zip">整學期課程圖資</a>
+					<a class="button icon fa-database grey" href="data.zip">課程圖資</a>
 					<hr>
 
 					<h2>【1】空間資料處理與地圖繪製</h2>
