--- a/EXAM/index.html
+++ b/EXAM/index.html
@@ -73,7 +73,7 @@
 							<a href="1082/1082Mid1.pdf"   class="button icon fa-question-circle blue">期中考一</a>
 							<a href="1082/1082Mid1.zip"   class="button icon fa-database grey">圖資</a>
 							<a href="1082/1082Mid1.html"  class="button icon fa-globe green">參考答案</a>
-					</div>
+						</div>
 					</div>
 					<div class="w3-row">
 						<div class="w3-col m4 s12">	
@@ -84,7 +84,7 @@
 							<a href="1082/1082Mid2.pdf"   class="button icon fa-question-circle blue">期中考二</a>
 							<a href="1082/1082Mid2.zip"   class="button icon fa-database grey">圖資</a>
 							<a href="1082/1082Mid2.html"  class="button icon fa-globe green">參考答案</a>
-					</div>
+						</div>
 					</div>
 					<div class="w3-row">
 						<div class="w3-col m4 s12">	
@@ -109,7 +109,7 @@
 							<a href="1072/1072Mid1.pdf"   class="button icon fa-question-circle blue">期中考一</a>
 							<a href="1072/1072Mid1.zip"   class="button icon fa-database grey">圖資</a>
 							<a href="1072/1072Mid1.html"  class="button icon fa-globe green">參考答案</a>
-					</div>
+						</div>
 					</div>
 					<div class="w3-row">
 						<div class="w3-col m4 s12">	
@@ -120,7 +120,7 @@
 							<a href="1072/1072Mid2.pdf"   class="button icon fa-question-circle blue">期中考二</a>
 							<a href="1072/1072Mid2.zip"   class="button icon fa-database grey">圖資</a>
 							<a href="1072/1072Mid2.html"  class="button icon fa-globe green">參考答案</a>
-					</div>
+						</div>
 					</div>
 					<div class="w3-row">
 						<div class="w3-col m4 s12">	
@@ -142,10 +142,10 @@
 							<p>範圍：【1】~【3】</p>
 						</div>
 						<div class="w3-col m8 s12">	
-							<a href="1071/1071	Mid1.pdf"   class="button icon fa-question-circle blue">期中考一</a>
+							<a href="1071/1071Mid1.pdf"   class="button icon fa-question-circle blue">期中考一</a>
 							<a href="1071/1071Mid1.zip"   class="button icon fa-database grey">圖資</a>
 							<a href="1071/1071Mid1.html"  class="button icon fa-globe green">參考答案</a>
-					</div>
+						</div>
 					</div>
 					<div class="w3-row">
 						<div class="w3-col m4 s12">	
@@ -156,7 +156,7 @@
 							<a href="1071/1071Mid2.pdf"   class="button icon fa-question-circle blue">期中考二</a>
 							<a href="1071/1071Mid2.zip"   class="button icon fa-database grey">圖資</a>
 							<a href="1071/1071Mid2.html"  class="button icon fa-globe green">參考答案</a>
-					</div>
+						</div>
 					</div>
 					<div class="w3-row">
 						<div class="w3-col m4 s12">	
@@ -167,6 +167,31 @@
 							<a href="1071/1071Final.pdf"  class="button icon fa-question-circle blue">期末考</a>
 							<a href="1071/1071Final.zip"  class="button icon fa-database grey">圖資</a>
 							<a href="1071/1071Final.html" class="button icon fa-globe green">參考答案</a>
+						</div>
+					</div>
+					<hr>
+					
+					<h2>106-2 空間分析方法與應用</h2>
+					<div class="w3-row">
+						<div class="w3-col m4 s12">					
+							<h3>期中考</h3>
+							<p>範圍：空間資料視覺化</p>
+						</div>
+						<div class="w3-col m8 s12">	
+							<a href="1062/1062Mid.pdf"   class="button icon fa-question-circle blue">期中考</a>
+							<a href="1062/1062Mid.zip"   class="button icon fa-database grey">圖資</a>
+							<a href="1062/1062Mid.html"  class="button icon fa-globe green">參考答案</a>
+						</div>
+					</div>
+					<div class="w3-row">
+						<div class="w3-col m4 s12">	
+							<h3>期末考</h3>
+							<p>範圍：全學期</p>
+						</div>
+						<div class="w3-col m8 s12">	
+							<a href="1062/1062Final.pdf"  class="button icon fa-question-circle blue">期末考</a>
+							<a href="1062/1062Final.zip"  class="button icon fa-database grey">圖資</a>
+							<a href="1062/1062Final.html" class="button icon fa-globe green">參考答案</a>
 						</div>
 					</div>
 				</div>
