--- a/REPORT/1072FinReport/index.html
+++ b/REPORT/1072FinReport/index.html
@@ -34,7 +34,7 @@
     <div class='container'>
       <div class='row'>
         <table class='table'>
-			<tr><th>入選</th><th>組別</th><th>組員</th><th>主題</th><th>書面</th><th>程式碼<br>網頁</th></tr>
+			<tr><th>入選</th><th>組別</th><th>組員</th><th>主題</th><th>書面</th><th>程式碼網頁</th></tr>
 			<tr 1><td></td><td>G1</td><td>王昱堯、江紀瑩、陳玥彤</td>
 				<td>板南線的居民投藍營，新店線的居民投綠營？<br/>──分析2016年總統投票結果與捷運站位置的關係</td>
 				<td><a href="G1.pdf" >📖</a></td><td><a href="G1.html" >💻</a></td></tr>
