--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0130)index.html -->
+<!-- saved from url=(0130) -->
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -20,7 +20,8 @@
 						Geog2017<br>
 						授課老師：溫在弘<br>
 						課程助教：杜承軒<br>
-						<a href="EXAM/index.html"  class="button icon fa-share exam" target="_self">歷年考古題</a>
+						<a href="EXAM/"  class="button icon fa-share exam" target="_self">歷年考古題</a>
+						<a href="REPORT/"  class="button icon fa-share exam" target="_self">學生作品集</a>
 					</p>
 				</header>
 
