--- a/EXAM/index.html
+++ b/EXAM/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0130)index.html -->
+<!-- saved from url=(0130) -->
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -21,7 +21,7 @@
 					Geog2017<br>
 					授課老師：溫在弘<br>
 					課程助教：杜承軒<br>
-					<a href="../index.html"  class="button icon fa-home exam" target="_self">回課程首頁</a>
+					<a href="../"  class="button icon fa-home exam" target="_self">回課程首頁</a>
 				</p>
 
 				
