--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 					<a class="button icon fa-book blue" href="WEN/12.pdf">授課投影片</a>
 					<br/>
 					<a class="button icon fa-book green" href="TA/TA_12.pdf">助教投影片</a>
-					<a class="button icon fa-database grey" href="DATA/12.zip">圖資</a>
+					<a class="button icon fa-database green" href="DATA/12.zip">APP參考檔案</a>
 					<a class="button icon fa-youtube red" href="https://youtu.be/Z9_y351JVsA">助教課影片</a>
 					</div>
 
