--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 					<h2>【INTRO】課程介紹</h2>
 					<a class="button icon fa-book blue" href="WEN/Intro.pdf">授課投影片</a>
 					<a class="button icon fa-book blue" href="WEN/Syllabus.pdf">課程大綱</a>
+					<br/>
 					<a class="button icon fa-database grey" href="DATA/data.zip">課程圖資</a>
+					<a class="button icon fa-globe grey" href="https://chenhusantu.notion.site/chenhusantu/018a8b36363747bfbff1d423fc5b3b25?v=bb02c535ef5f4bebac4d12518db605c8">課程圖資清單</a>
 					<hr>
 
 					<h2>【1】空間資料處理與地圖繪製</h2>
