--- a/OTHER/osm.html
+++ b/OTHER/osm.html
@@ -365,7 +365,9 @@ summary {
 </div>
 
 
-<p>OSM</p>
+<h2><p>OSM</p></h2>
+<h2><a href="osm.pdf">下載OSM助教課投影片</a></h2>
+<br/>
 <pre class="r"><code>library(GISTools);library(rgdal);library(OpenStreetMap)
 library(ggplot2);library(gridExtra);library(ggspatial)
 setwd(&quot;D:/1082SA/Data&quot;)
