--- a/DATA/index.html
+++ b/DATA/index.html
@@ -21,7 +21,7 @@
 
     <div class='container' style="width=2000px">
 		<div class='row' style="font-size:150%">
-			<p><a href="."><button>📁 下載所有圖資</button></button></a> 或 點選下方檔案名稱進行下載</p>
+			<p><a href="SA_Data.zip"><button>📁 下載所有圖資</button></button></a> 或 點選下方檔案名稱進行下載</p>
 		</div>
 
 		<div class='row'>
